src/main/java/goal/parser/antlr/MASParser.java
// Generated from MASParser.g4 by ANTLR 4.4
package goal.parser.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MASParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LTRARROW=33, LINE_COMMENT=36, ENV=2, RBR=27, LAUNCHSECTION=7, CLBR=28, 
		MAX=14, DO=11, FLOAT=18, INT=19, EQUALS=23, MINUS=22, ID=17, RTLARROW=32, 
		LBR=26, TYPE=13, ENTITY=9, COLON=20, SLBR=30, ATENV=10, DOUBLESTRING=35, 
		SRBR=31, NAME=5, WS=38, LAUNCH=12, LANGUAGE=6, ENVSECTION=1, COMMA=25, 
		WHEN=8, SINGLESTRING=34, WILDCARD=15, AGENTFILENAME=16, BLOCK_COMMENT=37, 
		PLUS=21, AGENTSECTION=4, CRBR=29, DOT=24, INIT=3;
	public static final String[] tokenNames = {
		"<INVALID>", "'environment'", "'env'", "'init'", "'agentfiles'", "'name'", 
		"'language'", "'launchpolicy'", "'when'", "'entity'", "'@env'", "'do'", 
		"'launch'", "'type'", "'max'", "'*'", "AGENTFILENAME", "ID", "FLOAT", 
		"INT", "':'", "'+'", "'-'", "'='", "'.'", "','", "'('", "')'", "'{'", 
		"'}'", "'['", "']'", "'<-'", "'->'", "SINGLESTRING", "DOUBLESTRING", "LINE_COMMENT", 
		"BLOCK_COMMENT", "WS"
	};
	public static final int
		RULE_mas = 0, RULE_environment = 1, RULE_environmentFile = 2, RULE_initParams = 3, 
		RULE_initParam = 4, RULE_initValues = 5, RULE_initValue = 6, RULE_simpleInitValue = 7, 
		RULE_functionInitValue = 8, RULE_listInitValue = 9, RULE_agentFiles = 10, 
		RULE_agentFile = 11, RULE_agentFileParameters = 12, RULE_agentFileParameter = 13, 
		RULE_launchPolicy = 14, RULE_launchRule = 15, RULE_simpleLaunchRule = 16, 
		RULE_launchRuleComponents = 17, RULE_launchRuleComponent = 18, RULE_conditionalLaunchRule = 19, 
		RULE_entityDescription = 20, RULE_entityConstraints = 21, RULE_entityConstraint = 22;
	public static final String[] ruleNames = {
		"mas", "environment", "environmentFile", "initParams", "initParam", "initValues", 
		"initValue", "simpleInitValue", "functionInitValue", "listInitValue", 
		"agentFiles", "agentFile", "agentFileParameters", "agentFileParameter", 
		"launchPolicy", "launchRule", "simpleLaunchRule", "launchRuleComponents", 
		"launchRuleComponent", "conditionalLaunchRule", "entityDescription", "entityConstraints", 
		"entityConstraint"
	};

	@Override
	public String getGrammarFileName() { return "MASParser.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MASParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class MasContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(MASParser.EOF, 0); }
		public EnvironmentContext environment() {
			return getRuleContext(EnvironmentContext.class,0);
		}
		public AgentFilesContext agentFiles() {
			return getRuleContext(AgentFilesContext.class,0);
		}
		public LaunchPolicyContext launchPolicy() {
			return getRuleContext(LaunchPolicyContext.class,0);
		}
		public MasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mas; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MASParserVisitor ) return ((MASParserVisitor<? extends T>)visitor).visitMas(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MasContext mas() throws RecognitionException {
		MasContext _localctx = new MasContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_mas);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			_la = _input.LA(1);
			if (_la==ENVSECTION) {
				{
				setState(46); environment();
				}
			}

			setState(49); agentFiles();
			setState(50); launchPolicy();
			setState(51); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EnvironmentContext extends ParserRuleContext {
		public InitParamsContext initParams() {
			return getRuleContext(InitParamsContext.class,0);
		}
		public TerminalNode CRBR() { return getToken(MASParser.CRBR, 0); }
		public EnvironmentFileContext environmentFile() {
			return getRuleContext(EnvironmentFileContext.class,0);
		}
		public TerminalNode DOT() { return getToken(MASParser.DOT, 0); }
		public TerminalNode EQUALS() { return getToken(MASParser.EQUALS, 0); }
		public TerminalNode INIT() { return getToken(MASParser.INIT, 0); }
		public TerminalNode CLBR() { return getToken(MASParser.CLBR, 0); }
		public TerminalNode SLBR() { return getToken(MASParser.SLBR, 0); }
		public TerminalNode SRBR() { return getToken(MASParser.SRBR, 0); }
		public TerminalNode ENVSECTION() { return getToken(MASParser.ENVSECTION, 0); }
		public EnvironmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_environment; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MASParserVisitor ) return ((MASParserVisitor<? extends T>)visitor).visitEnvironment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EnvironmentContext environment() throws RecognitionException {
		EnvironmentContext _localctx = new EnvironmentContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_environment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53); match(ENVSECTION);
			setState(54); match(CLBR);
			setState(55); environmentFile();
			setState(63);
			_la = _input.LA(1);
			if (_la==INIT) {
				{
				setState(56); match(INIT);
				setState(57); match(EQUALS);
				setState(58); match(SLBR);
				setState(59); initParams();
				setState(60); match(SRBR);
				setState(61); match(DOT);
				}
			}

			setState(65); match(CRBR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EnvironmentFileContext extends ParserRuleContext {
		public TerminalNode DOT() { return getToken(MASParser.DOT, 0); }
		public TerminalNode EQUALS() { return getToken(MASParser.EQUALS, 0); }
		public TerminalNode DOUBLESTRING() { return getToken(MASParser.DOUBLESTRING, 0); }
		public TerminalNode ENV() { return getToken(MASParser.ENV, 0); }
		public EnvironmentFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_environmentFile; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MASParserVisitor ) return ((MASParserVisitor<? extends T>)visitor).visitEnvironmentFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EnvironmentFileContext environmentFile() throws RecognitionException {
		EnvironmentFileContext _localctx = new EnvironmentFileContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_environmentFile);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67); match(ENV);
			setState(68); match(EQUALS);
			setState(69); match(DOUBLESTRING);
			setState(70); match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InitParamsContext extends ParserRuleContext {
		public InitParamContext initParam(int i) {
			return getRuleContext(InitParamContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(MASParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MASParser.COMMA, i);
		}
		public List<InitParamContext> initParam() {
			return getRuleContexts(InitParamContext.class);
		}
		public InitParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_initParams; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MASParserVisitor ) return ((MASParserVisitor<? extends T>)visitor).visitInitParams(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitParamsContext initParams() throws RecognitionException {
		InitParamsContext _localctx = new InitParamsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_initParams);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72); initParam();
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(73); match(COMMA);
				setState(74); initParam();
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InitParamContext extends ParserRuleContext {
		public TerminalNode EQUALS() { return getToken(MASParser.EQUALS, 0); }
		public TerminalNode ID() { return getToken(MASParser.ID, 0); }
		public InitValueContext initValue() {
			return getRuleContext(InitValueContext.class,0);
		}
		public InitParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_initParam; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MASParserVisitor ) return ((MASParserVisitor<? extends T>)visitor).visitInitParam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitParamContext initParam() throws RecognitionException {
		InitParamContext _localctx = new InitParamContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_initParam);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80); match(ID);
			setState(81); match(EQUALS);
			setState(82); initValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InitValuesContext extends ParserRuleContext {
		public List<TerminalNode> COMMA() { return getTokens(MASParser.COMMA); }
		public InitValueContext initValue(int i) {
			return getRuleContext(InitValueContext.class,i);
		}
		public TerminalNode COMMA(int i) {
			return getToken(MASParser.COMMA, i);
		}
		public List<InitValueContext> initValue() {
			return getRuleContexts(InitValueContext.class);
		}
		public InitValuesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_initValues; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MASParserVisitor ) return ((MASParserVisitor<? extends T>)visitor).visitInitValues(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitValuesContext initValues() throws RecognitionException {
		InitValuesContext _localctx = new InitValuesContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_initValues);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84); initValue();
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(85); match(COMMA);
				setState(86); initValue();
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InitValueContext extends ParserRuleContext {
		public FunctionInitValueContext functionInitValue() {
			return getRuleContext(FunctionInitValueContext.class,0);
		}
		public SimpleInitValueContext simpleInitValue() {
			return getRuleContext(SimpleInitValueContext.class,0);
		}
		public ListInitValueContext listInitValue() {
			return getRuleContext(ListInitValueContext.class,0);
		}
		public InitValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_initValue; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MASParserVisitor ) return ((MASParserVisitor<? extends T>)visitor).visitInitValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitValueContext initValue() throws RecognitionException {
		InitValueContext _localctx = new InitValueContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_initValue);
		try {
			setState(95);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(92); simpleInitValue();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(93); functionInitValue();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(94); listInitValue();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimpleInitValueContext extends ParserRuleContext {
		public TerminalNode SINGLESTRING() { return getToken(MASParser.SINGLESTRING, 0); }
		public TerminalNode FLOAT() { return getToken(MASParser.FLOAT, 0); }
		public TerminalNode INT() { return getToken(MASParser.INT, 0); }
		public TerminalNode ID() { return getToken(MASParser.ID, 0); }
		public TerminalNode DOUBLESTRING() { return getToken(MASParser.DOUBLESTRING, 0); }
		public SimpleInitValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleInitValue; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MASParserVisitor ) return ((MASParserVisitor<? extends T>)visitor).visitSimpleInitValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SimpleInitValueContext simpleInitValue() throws RecognitionException {
		SimpleInitValueContext _localctx = new SimpleInitValueContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_simpleInitValue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ID) | (1L << FLOAT) | (1L << INT) | (1L << SINGLESTRING) | (1L << DOUBLESTRING))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionInitValueContext extends ParserRuleContext {
		public InitValuesContext initValues() {
			return getRuleContext(InitValuesContext.class,0);
		}
		public TerminalNode ID() { return getToken(MASParser.ID, 0); }
		public TerminalNode RBR() { return getToken(MASParser.RBR, 0); }
		public TerminalNode LBR() { return getToken(MASParser.LBR, 0); }
		public FunctionInitValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionInitValue; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MASParserVisitor ) return ((MASParserVisitor<? extends T>)visitor).visitFunctionInitValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionInitValueContext functionInitValue() throws RecognitionException {
		FunctionInitValueContext _localctx = new FunctionInitValueContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_functionInitValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99); match(ID);
			setState(100); match(LBR);
			setState(101); initValues();
			setState(102); match(RBR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListInitValueContext extends ParserRuleContext {
		public InitValuesContext initValues() {
			return getRuleContext(InitValuesContext.class,0);
		}
		public TerminalNode SLBR() { return getToken(MASParser.SLBR, 0); }
		public TerminalNode SRBR() { return getToken(MASParser.SRBR, 0); }
		public ListInitValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listInitValue; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MASParserVisitor ) return ((MASParserVisitor<? extends T>)visitor).visitListInitValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListInitValueContext listInitValue() throws RecognitionException {
		ListInitValueContext _localctx = new ListInitValueContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_listInitValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104); match(SLBR);
			setState(105); initValues();
			setState(106); match(SRBR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AgentFilesContext extends ParserRuleContext {
		public TerminalNode CRBR() { return getToken(MASParser.CRBR, 0); }
		public List<AgentFileContext> agentFile() {
			return getRuleContexts(AgentFileContext.class);
		}
		public TerminalNode CLBR() { return getToken(MASParser.CLBR, 0); }
		public TerminalNode AGENTSECTION() { return getToken(MASParser.AGENTSECTION, 0); }
		public AgentFileContext agentFile(int i) {
			return getRuleContext(AgentFileContext.class,i);
		}
		public AgentFilesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_agentFiles; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MASParserVisitor ) return ((MASParserVisitor<? extends T>)visitor).visitAgentFiles(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AgentFilesContext agentFiles() throws RecognitionException {
		AgentFilesContext _localctx = new AgentFilesContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_agentFiles);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108); match(AGENTSECTION);
			setState(109); match(CLBR);
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOUBLESTRING) {
				{
				{
				setState(110); agentFile();
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(116); match(CRBR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AgentFileContext extends ParserRuleContext {
		public TerminalNode DOT() { return getToken(MASParser.DOT, 0); }
		public TerminalNode DOUBLESTRING() { return getToken(MASParser.DOUBLESTRING, 0); }
		public TerminalNode SLBR() { return getToken(MASParser.SLBR, 0); }
		public TerminalNode SRBR() { return getToken(MASParser.SRBR, 0); }
		public AgentFileParametersContext agentFileParameters() {
			return getRuleContext(AgentFileParametersContext.class,0);
		}
		public AgentFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_agentFile; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MASParserVisitor ) return ((MASParserVisitor<? extends T>)visitor).visitAgentFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AgentFileContext agentFile() throws RecognitionException {
		AgentFileContext _localctx = new AgentFileContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_agentFile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118); match(DOUBLESTRING);
			setState(123);
			_la = _input.LA(1);
			if (_la==SLBR) {
				{
				setState(119); match(SLBR);
				setState(120); agentFileParameters();
				setState(121); match(SRBR);
				}
			}

			setState(125); match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AgentFileParametersContext extends ParserRuleContext {
		public AgentFileParameterContext agentFileParameter(int i) {
			return getRuleContext(AgentFileParameterContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(MASParser.COMMA); }
		public List<AgentFileParameterContext> agentFileParameter() {
			return getRuleContexts(AgentFileParameterContext.class);
		}
		public TerminalNode COMMA(int i) {
			return getToken(MASParser.COMMA, i);
		}
		public AgentFileParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_agentFileParameters; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MASParserVisitor ) return ((MASParserVisitor<? extends T>)visitor).visitAgentFileParameters(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AgentFileParametersContext agentFileParameters() throws RecognitionException {
		AgentFileParametersContext _localctx = new AgentFileParametersContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_agentFileParameters);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127); agentFileParameter();
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(128); match(COMMA);
				setState(129); agentFileParameter();
				}
				}
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AgentFileParameterContext extends ParserRuleContext {
		public TerminalNode EQUALS() { return getToken(MASParser.EQUALS, 0); }
		public TerminalNode ID() { return getToken(MASParser.ID, 0); }
		public TerminalNode NAME() { return getToken(MASParser.NAME, 0); }
		public TerminalNode LANGUAGE() { return getToken(MASParser.LANGUAGE, 0); }
		public AgentFileParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_agentFileParameter; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MASParserVisitor ) return ((MASParserVisitor<? extends T>)visitor).visitAgentFileParameter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AgentFileParameterContext agentFileParameter() throws RecognitionException {
		AgentFileParameterContext _localctx = new AgentFileParameterContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_agentFileParameter);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			_la = _input.LA(1);
			if ( !(_la==NAME || _la==LANGUAGE) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(136); match(EQUALS);
			setState(137); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LaunchPolicyContext extends ParserRuleContext {
		public TerminalNode CRBR() { return getToken(MASParser.CRBR, 0); }
		public LaunchRuleContext launchRule(int i) {
			return getRuleContext(LaunchRuleContext.class,i);
		}
		public List<LaunchRuleContext> launchRule() {
			return getRuleContexts(LaunchRuleContext.class);
		}
		public TerminalNode CLBR() { return getToken(MASParser.CLBR, 0); }
		public TerminalNode LAUNCHSECTION() { return getToken(MASParser.LAUNCHSECTION, 0); }
		public LaunchPolicyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_launchPolicy; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MASParserVisitor ) return ((MASParserVisitor<? extends T>)visitor).visitLaunchPolicy(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LaunchPolicyContext launchPolicy() throws RecognitionException {
		LaunchPolicyContext _localctx = new LaunchPolicyContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_launchPolicy);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139); match(LAUNCHSECTION);
			setState(140); match(CLBR);
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHEN || _la==LAUNCH) {
				{
				{
				setState(141); launchRule();
				}
				}
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(147); match(CRBR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LaunchRuleContext extends ParserRuleContext {
		public SimpleLaunchRuleContext simpleLaunchRule() {
			return getRuleContext(SimpleLaunchRuleContext.class,0);
		}
		public ConditionalLaunchRuleContext conditionalLaunchRule() {
			return getRuleContext(ConditionalLaunchRuleContext.class,0);
		}
		public LaunchRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_launchRule; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MASParserVisitor ) return ((MASParserVisitor<? extends T>)visitor).visitLaunchRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LaunchRuleContext launchRule() throws RecognitionException {
		LaunchRuleContext _localctx = new LaunchRuleContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_launchRule);
		try {
			setState(151);
			switch (_input.LA(1)) {
			case LAUNCH:
				enterOuterAlt(_localctx, 1);
				{
				setState(149); simpleLaunchRule();
				}
				break;
			case WHEN:
				enterOuterAlt(_localctx, 2);
				{
				setState(150); conditionalLaunchRule();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimpleLaunchRuleContext extends ParserRuleContext {
		public TerminalNode DOT() { return getToken(MASParser.DOT, 0); }
		public LaunchRuleComponentsContext launchRuleComponents() {
			return getRuleContext(LaunchRuleComponentsContext.class,0);
		}
		public TerminalNode LAUNCH() { return getToken(MASParser.LAUNCH, 0); }
		public SimpleLaunchRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleLaunchRule; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MASParserVisitor ) return ((MASParserVisitor<? extends T>)visitor).visitSimpleLaunchRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SimpleLaunchRuleContext simpleLaunchRule() throws RecognitionException {
		SimpleLaunchRuleContext _localctx = new SimpleLaunchRuleContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_simpleLaunchRule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153); match(LAUNCH);
			setState(154); launchRuleComponents();
			setState(155); match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
